# cell_cogniman

./: to_do  to_do.md
src/bringup/: package.xml  setup.py
src/bringup/config/: config_rviz1.rviz  gz_bridge_config.yaml
src/bringup/launch/: launch1.launch.py  launch1gz.launch.py
src/description/: Untitled Diagram.drawio  readme.md
src/description/cogniman_scene_description/: CMakeLists.txt  build_urdf.sh  package.xml
src/description/cogniman_scene_description/config/: IK_plugin.yaml  robot.srdf  srdf.xacro
src/description/environment_hooks_package/: CMakeLists.txt  package.xml
src/description/motoman_gp7/motoman_gp7_support/: CMakeLists.txt  package.xml
src/description/motoman_gp7/motoman_gp7_support/meshes/collision/: gp7_link_2_l.stl
src/description/motoman_gp7/motoman_gp7_support/urdf/: gp7_macro.xacro
src/description/motoman_gp7/motoman_gp7_support/urdf/inertia_description/: inertia_table.xacro
src/description/motoman_gp7_with_inertia/: CMakeLists.txt  package.xml
src/description/plateforme_description/: CMakeLists.txt  package.xml
src/description/positionning_tool/: CMakeLists.txt  package.xml
src/description/profilo_description/: CMakeLists.txt  package.xml
src/description/screw_gripper_description/: CMakeLists.txt  package.xml
src/description/support_removal_description/: CMakeLists.txt  package.xml
src/description/toggle_clamp/: CMakeLists.txt  package.xml
src/description/xacro_inertia/: CMakeLists.txt  package.xml
src/description/xacro_materials/: CMakeLists.txt  package.xml
(+26 files in other folders)
